Add delete product by id api
